# CerCollettiva

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  env.example  implementation_plan.md  install.sh  install_dev.sh  migrate.sh  pyproject.toml  pytest.ini  requirements.txt  shell.sh
.claude/agents/: cer-gse-incentives-manager.md  codebase-auditor.md  gdpr-nonprofit-compliance.md  git-commit-manager.md
.cursor/rules/: 00-guards.mdc  01-output-format-text.mdc  05-deliberate-first.mdc  20-quality-baseline.mdc  21-python-standards.mdc  22-testing-baseline.mdc  23-sec-obs-perf.mdc  26-reuse-first.mdc  A0-default-behavior.mdc  TASKS.json
.github/workflows/: ci.yml  release.yml
app/: requirements.txt
cercollettiva/: urls.py
cercollettiva/management/commands/: gen_field_key.py
cercollettiva/settings/: base.py  local.py  production.py  test.py
config/grafana/dashboards/: cercollettiva-overview.json
config/grafana/provisioning/dashboards/: dashboard.yml
config/mosquitto/: acl  mosquitto.conf  passwd
config/nginx/: nginx.conf
config/nginx/conf.d/: cercollettiva.conf
config/prometheus/: prometheus.yml
core/: admin.py  forms.py  middleware.py  models.py  urls.py  urls_monitoring.py
core/templates/admin/: base_site.html
core/templates/admin/dashboard/: change_list.html  index.html
core/templates/core/: _403.html  _404.html  _plant_gaudi_preview.html_  _plant_gaudi_update.html_  base.html  cer_detail.html  cer_fees.html  cer_join.html  cer_list.html  dashboard.html  home.html  member_registry.html  membership_card.html  mqtt_config.html  plant_delete_confirm.html  plant_detail.html  plant_form.html  plant_from_gaudi.html  plant_list.html
core/views/: __init__.py  cer.py  dashboard.py  economic.py  fees.py  setup.py
core/views/api/: monitoring.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  MONITORING_SYSTEM.md  README.md  SECURITY_GUIDE.md  STRATEGIC_ROADMAP.md  TECHNICAL_SPECIFICATIONS.md  contributing.md  deploy.md  docker_db_persistence.md  monitoring.md  ota.md  overview.md  roadmap.md  security-gdpr.md  testing.md
docs/api/: endpoints-core.md  endpoints-energy.md  index.md
docs/decisions/: ADR-001-mqtt-stack.md  ADR-002-credentials-per-device.md
docs/energy/: mqtt-topics.md  payloads-shelly.md
docs/install/: disinstalla_cercollettiva.sh  install.sh  install_updated.sh  install_wsl_debian.sh
docs/operations/: environment.md  logging-monitoring.md  migrations.md  next-steps.md
documents/: services.py
documents/templates/documents/: detail.html  document_confirm_delete.html  list.html  plant_document_upload.html  upload.html
energy/: admin.py  urls.py  views.py
energy/management/commands/: gen_mqtt_device_creds.py  init_mqtt_broker.py  mqtt_client.py  publish_mqtt_demo.py  seed_mqtt_demo.py
energy/mqtt/: acl.py  auth.py  client.py  core.py
energy/services/: utils.py
energy/templates/energy/: base.html  dashboard.html
energy/templates/energy/devices/: list.html
energy/views/: mqtt_views.py
examples/: docker-compose.override.yml  management-commands-example.py  test-data.sql
monitoring/: __init__.py  urls.py  views.py
scripts/: README.md  backup.sh  check.ps1  check.sh  init-db.sql  logs.sh  restart.sh  restore.sh  rundev.ps1  rundev.sh  setup.ps1  setup.sh  start_gunicorn.sh  test-docker.sh  update.sh  validate-setup.sh
static/css/: admin-dark.css  main.css
static/js/: ab-testing.js  accessibility-audit.js  analytics-dashboard.js  device-detector.js  performance-monitor.js  user-feedback.js
templates/: base.html
templates/admin/: base_site.html
templates/core/: cer_join.html  cer_public_detail.html
templates/core/setup/: initial_setup.html  setup_complete.html
tests/: __init__.py  test_models_core.py  test_models_energy.py  test_models_users.py  test_monitoring.py
users/: forms.py  signals.py  views.py
users/templates/users/: admin_profile.html  gestione_utenti.html  login.html  password_change.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  privacy_policy.html  profile.html  register.html  user_detail.html
users/tests/: test_csrf_cookie.py
utilities/: README.md
